--- a/Config/Json/s/CreateRoleConfigCategory.json
+++ b/Config/Json/s/CreateRoleConfigCategory.json
@@ -14,7 +14,8 @@
     "CurrencyType": 1,
     "CurrencyValue": 1000,
     "RaceFlag": 767,
-    "BaseProperty": 1001
+    "BaseProperty": 1001,
+    "TaskId": 1001
   },
   {
     "Id": 2,
@@ -31,7 +32,8 @@
     "CurrencyType": 1,
     "CurrencyValue": 1000,
     "RaceFlag": 269,
-    "BaseProperty": 1002
+    "BaseProperty": 1002,
+    "TaskId": 1001
   },
   {
     "Id": 4,
@@ -48,7 +50,8 @@
     "CurrencyType": 1,
     "CurrencyValue": 1000,
     "RaceFlag": 873,
-    "BaseProperty": 1001
+    "BaseProperty": 1001,
+    "TaskId": 1001
   },
   {
     "Id": 8,
@@ -65,7 +68,8 @@
     "CurrencyType": 1,
     "CurrencyValue": 1000,
     "RaceFlag": 367,
-    "BaseProperty": 1002
+    "BaseProperty": 1002,
+    "TaskId": 1001
   },
   {
     "Id": 16,
@@ -82,7 +86,8 @@
     "CurrencyType": 1,
     "CurrencyValue": 1000,
     "RaceFlag": 887,
-    "BaseProperty": 1001
+    "BaseProperty": 1001,
+    "TaskId": 1001
   },
   {
     "Id": 32,
@@ -99,7 +104,8 @@
     "CurrencyType": 1,
     "CurrencyValue": 1000,
     "RaceFlag": 130,
-    "BaseProperty": 1002
+    "BaseProperty": 1002,
+    "TaskId": 1001
   },
   {
     "Id": 64,
@@ -116,7 +122,8 @@
     "CurrencyType": 1,
     "CurrencyValue": 1000,
     "RaceFlag": 446,
-    "BaseProperty": 1001
+    "BaseProperty": 1001,
+    "TaskId": 1001
   },
   {
     "Id": 128,
@@ -133,7 +140,8 @@
     "CurrencyType": 1,
     "CurrencyValue": 1000,
     "RaceFlag": 977,
-    "BaseProperty": 1002
+    "BaseProperty": 1002,
+    "TaskId": 1001
   },
   {
     "Id": 256,
@@ -150,7 +158,8 @@
     "CurrencyType": 1,
     "CurrencyValue": 1000,
     "RaceFlag": 184,
-    "BaseProperty": 1001
+    "BaseProperty": 1001,
+    "TaskId": 1001
   },
   {
     "Id": 512,
@@ -167,6 +176,7 @@
     "CurrencyType": 1,
     "CurrencyValue": 1000,
     "RaceFlag": 1023,
-    "BaseProperty": 1002
+    "BaseProperty": 1002,
+    "TaskId": 1001
   }
 ]
