--- a/FGUIProject/assets/Bag/package.xml
+++ b/FGUIProject/assets/Bag/package.xml
@@ -5,7 +5,8 @@
     <component id="m1et1" name="BagCanvas.xml" path="/Bag/"/>
     <component id="qjfe2" name="ListCom.xml" path="/Bag/"/>
     <component id="f7kj3" name="TabButton.xml" path="/Component/" exported="true"/>
-    <component id="k2he4" name="BagPanel.xml" path="/" exported="true"/>
+    <component id="k2he4" name="UIBagPanel.xml" path="/" exported="true"/>
+    <component id="k2he6" name="equip_list.xml" path="/Component/" exported="true"/>
   </resources>
   <publish name="" genCode="true"/>
 </packageDescription>
