--- a/FGUIProject/assets/Common/package.xml
+++ b/FGUIProject/assets/Common/package.xml
@@ -748,7 +748,7 @@
     <image id="f7kjrp" name="switch_on_handle.png" path="/Res/UIEtc/"/>
     <image id="f7kjrq" name="toggle_checkbox_off.png" path="/Res/UIEtc/"/>
     <image id="f7kjrr" name="toggle_checkbox_on.png" path="/Res/UIEtc/"/>
-    <font id="k2hers" name="Expressway.ttf" path="/Fonts/" renderMode="" samplePointSize="16"/>
+    <font id="k2hers" name="Expressway.ttf" path="/Fonts/" renderMode="smooth" samplePointSize="16"/>
     <component id="k2hert" name="green_item_frame.xml" path="/Component/Item/" exported="true"/>
     <component id="k2herv" name="close_button.xml" path="/Component/Button/" exported="true"/>
     <component id="k2herw" name="full_screen_frame.xml" path="/Component/Frame/" exported="true"/>
@@ -757,6 +757,7 @@
     <component id="k2herz" name="red_item_frame.xml" path="/Component/Item/" exported="true"/>
     <component id="k2hes0" name="orange_item_frame.xml" path="/Component/Item/" exported="true"/>
     <component id="k2hes1" name="purple_item_frame.xml" path="/Component/Item/" exported="true"/>
+    <component id="k2hes3" name="equipment_frame.xml" path="/Component/Frame/" exported="true"/>
   </resources>
   <publish name=""/>
 </packageDescription>
